Changelog v5.2.11 (2025-04-27):
- Fix Small bug with H!anime

Changelog v5.2.10 (2025-04-27):
- Small Fix with Setup Wizard for Source Type

Changelog v5.2.9 (2025-04-26):
- Refactored default.py to <25 lines
- Moved logic into Main.py
- Fix Language Invoker Bugs
- Improved Airing Anime Calendar

Changelog v5.2.8 (2025-04-23):
- Fixed Skipping Bug with certain Embeds
- Moved Icons to Context Addon
- Added extra settings in General Category

Changelog v5.2.7 (2025-04-19):
- Animix will fail gracefully.
- Cleaned up settings.xml

Changelog v5.2.6 (2025-04-18):
- Put Watchlist in alphabetical order

Changelog v5.2.5 (2025-04-18):
- Fixed embed playback using IA
- Fixed incorrect titles in Source Select
- Changed default timeout to 20
- Updated Python Version Number

Changelog v5.2.4 (2025-04-17):
- Added hd-1 for testing

Changelog v5.2.3 (2025-04-16):
- Fixed Bugs with Best Match

Changelog v5.2.2 (2025-04-16):
- Fixed Bugs with last played source
- Fixed Bugs with UnCached Sources
- Modified Setup Wizard

Changelog v5.2.1 (2025-04-15):
- Small String bug

Changelog v5.2.0 (2025-04-15):
- Added a Setup Wizard Script
- Prepared the Migration Script
- Added Settings Script to AD and RD

Changelog v5.1.100 (2025-04-13):
- Added Playing Next default action setting

Changelog v5.1.99 (2025-04-12):
- Forgot to delete dumb print statement

Changelog v5.1.98 (2025-04-12):
- Added Fuzzy Match Sensitivity option

Changelog v5.1.97 (2025-04-11):
- Replaced Fuzzypacks with difflib

Changelog v5.1.96 (2025-04-10):
- Added Sub and Dub Presets

Changelog v5.1.95 (2025-04-09):
- Added Season Checking for Filtering

Changelog v5.1.94 (2025-04-08):
- Improved Filtering Significantly

Changelog v5.1.93 (2025-04-06):
- Improved Scraping again
- Improved Filtering again
- Fixed a Setting Label

Changelog v5.1.92 (2025-04-05):
- Fix some small filtering code

Changelog v5.1.91 (2025-04-05):
- Fix Movies for Animetosho
- Improve Animetosho Scraping

Changelog v5.1.90 (2025-04-04):